@@ -1,3 +1,10 @@
+2009-07-07  Pavel Roskin  <proski@gnu.org>
+
+	* lib/arg.c (find_long_option): Remove.
+	(find_long): Add `len' argument, make `s' const char *.
+	(grub_arg_parse): Parse long options in place, not in a
+	temporary buffer.
+
 2009-07-06  Pavel Roskin  <proski@gnu.org>
 
 	* commands/search.c (search_fs): Fix potential NULL pointer
